# coinbase-exchange

./: .gitignore  Makefile  README.md  cabal.config  coinbase-exchange.cabal  stack.yaml
sbox/: Main.hs
src/Coinbase/Exchange/: MarketData.hs  Private.hs  Rest.hs  Socket.hs  Types.hs
src/Coinbase/Exchange/Types/: Core.hs  MarketData.hs  Private.hs  Socket.hs
test/: Main.hs
test/Coinbase/Exchange/MarketData/: Test.hs
test/Coinbase/Exchange/Private/: Test.hs
test/Coinbase/Exchange/Socket/: Test.hs
