name:                coinbase-exchange
version:             0.1.0.0
synopsis:            Connector library for the coinbase exchange.
description:         Access library for the coinbase exchange. Allows the use
                     of both the public market data API as well as the private
                     account data API. Additionally provides types to connect
                     to the streaming API via a websocket.
license:             MIT
license-file:        LICENSE
author:              Andrew Rademacher
maintainer:          andrewrademacher@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
    hs-source-dirs:     src
    default-language:   Haskell2010

    exposed-modules:    Coinbase.Exchange.MarketData
                    ,   Coinbase.Exchange.Private
                    ,   Coinbase.Exchange.Socket
                    ,   Coinbase.Exchange.Types.Core
                    ,   Coinbase.Exchange.Types.MarketData
                    ,   Coinbase.Exchange.Types.Private
                    ,   Coinbase.Exchange.Types.Socket
                    ,   Coinbase.Exchange.Types

    other-modules:      Coinbase.Exchange.Rest

    build-depends:      base                ==4.7.*
                    ,   mtl                 ==2.2.*
                    ,   resourcet           ==1.1.*
                    ,   transformers-base   ==0.4.*
                    ,   conduit             ==1.2.*
                    ,   conduit-extra       ==1.1.*
                    ,   http-conduit        ==2.1.*
                    ,   aeson               ==0.8.*
                    ,   aeson-casing        ==0.1.*
                    ,   http-types          ==0.8.*
                    ,   text                ==1.2.*
                    ,   bytestring          ==0.10.*
                    ,   base64-bytestring   ==1.0.*
                    ,   time                ==1.4.*
                    ,   scientific          ==0.3.*
                    ,   uuid                ==1.3.*
                    ,   uuid-aeson          ==0.1.*
                    ,   vector              ==0.10.*
                    ,   hashable            ==1.2.*
                    ,   deepseq             ==1.3.*
                    ,   network             ==2.6.*
                    ,   websockets          ==0.9.*
                    ,   wuss                ==1.0.*
                    ,   cryptohash          ==0.11.*
                    ,   byteable            ==0.1.*

                    ,   old-locale

executable sandbox
    main-is:            Main.hs
    hs-source-dirs:     sbox
    default-language:   Haskell2010

    build-depends:      base                ==4.7.*
                    ,   http-client         ==0.4.*
                    ,   http-client-tls     ==0.2.*

                    ,   uuid
                    ,   text
                    ,   aeson
                    ,   bytestring
                    ,   time
                    ,   old-locale
                    ,   conduit
                    ,   conduit-extra
                    ,   http-conduit
                    ,   resourcet
                    ,   websockets
                    ,   transformers
                    ,   network
                    ,   wuss
                    ,   scientific

                    ,   coinbase-exchange

test-suite test-coinbase
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     test
    default-language:   Haskell2010

    build-depends:      base                ==4.7.*
                    ,   tasty               ==0.10.*
                    ,   tasty-th            ==0.1.*
                    ,   tasty-quickcheck    ==0.8.*
                    ,   tasty-hunit         ==0.9.*

                    ,   uuid
                    ,   bytestring
                    ,   time
                    ,   old-locale
                    ,   http-client-tls
                    ,   http-conduit
                    ,   transformers

                    ,   coinbase-exchange
