name:                coinbase-exchange
version:             0.2.0.0
synopsis:            Connector library for the coinbase exchange.
description:         Access library for the coinbase exchange. Allows the use
                     of both the public market data API as well as the private
                     account data API. Additionally provides types to connect
                     to the streaming API via a websocket.
license:             MIT
license-file:        LICENSE
author:              Andrew Rademacher
maintainer:          andrewrademacher@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
    hs-source-dirs:     src
    default-language:   Haskell2010

    exposed-modules:    Coinbase.Exchange.MarketData
                    ,   Coinbase.Exchange.Private
                    ,   Coinbase.Exchange.Socket
                    ,   Coinbase.Exchange.Types.Core
                    ,   Coinbase.Exchange.Types.MarketData
                    ,   Coinbase.Exchange.Types.Private
                    ,   Coinbase.Exchange.Types.Socket
                    ,   Coinbase.Exchange.Types

    other-modules:      Coinbase.Exchange.Rest

    build-depends:      base                ==4.*
                    ,   mtl
                    ,   resourcet
                    ,   transformers-base
                    ,   conduit
                    ,   conduit-extra
                    ,   http-conduit
                    ,   aeson
                    ,   aeson-casing
                    ,   http-types
                    ,   text
                    ,   bytestring
                    ,   base64-bytestring
                    ,   time
                    ,   scientific
                    ,   uuid
                    ,   uuid-aeson
                    ,   vector
                    ,   hashable
                    ,   deepseq
                    ,   network
                    ,   websockets
                    ,   wuss
                    ,   cryptohash
                    ,   byteable

                    ,   old-locale

executable sandbox
    main-is:            Main.hs
    hs-source-dirs:     sbox
    default-language:   Haskell2010

    build-depends:      base                ==4.*
                    ,   http-client
                    ,   http-client-tls

                    ,   uuid
                    ,   text
                    ,   aeson
                    ,   bytestring
                    ,   time
                    ,   old-locale
                    ,   conduit
                    ,   conduit-extra
                    ,   http-conduit
                    ,   resourcet
                    ,   websockets
                    ,   transformers
                    ,   network
                    ,   wuss
                    ,   scientific

                    ,   coinbase-exchange

test-suite test-coinbase
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     test
    default-language:   Haskell2010

    build-depends:      base                ==4.*
                    ,   tasty
                    ,   tasty-th
                    ,   tasty-quickcheck
                    ,   tasty-hunit

                    ,   uuid
                    ,   bytestring
                    ,   time
                    ,   old-locale
                    ,   http-client-tls
                    ,   http-conduit
                    ,   transformers

                    ,   coinbase-exchange
