name:                coinbase-exchange
version:             0.3.0.0
synopsis:            Connector library for the coinbase exchange.
description:         Access library for the coinbase exchange. Allows the use
                     of both the public market data API as well as the private
                     account data API. Additionally provides types to connect
                     to the streaming API via a websocket.
license:             MIT
license-file:        LICENSE
author:              Andrew Rademacher
maintainer:          andrewrademacher@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.20

library
    hs-source-dirs:     src
    default-language:   Haskell2010

    exposed-modules:    Coinbase.Exchange.MarketData
                    ,   Coinbase.Exchange.Private
                    ,   Coinbase.Exchange.Socket
                    ,   Coinbase.Exchange.Types.Core
                    ,   Coinbase.Exchange.Types.MarketData
                    ,   Coinbase.Exchange.Types.Private
                    ,   Coinbase.Exchange.Types.Socket
                    ,   Coinbase.Exchange.Types

    other-modules:      Coinbase.Exchange.Rest

    build-depends:      base                ==4.*
                    ,   mtl                 >=2.2
                    ,   resourcet
                    ,   transformers-base
                    ,   conduit
                    ,   conduit-extra
                    ,   http-conduit
                    ,   aeson               >=0.10.0
                    ,   aeson-casing
                    ,   http-types
                    ,   text
                    ,   bytestring
                    ,   base64-bytestring
                    ,   time                >=1.5
                    ,   scientific
                    ,   uuid
                    ,   uuid-aeson
                    ,   vector
                    ,   hashable
                    ,   deepseq
                    ,   network
                    ,   websockets
                    ,   wuss
                    ,   cryptohash
                    ,   byteable
                    ,   exceptions
                    ,   unordered-containers

                    ,   old-locale

executable sandbox
    main-is:            Main.hs
    hs-source-dirs:     sbox
    default-language:   Haskell2010

    build-depends:      base                ==4.*
                    ,   http-client
                    ,   http-client-tls

                    ,   uuid
                    ,   text
                    ,   aeson               >=0.10.0
                    ,   bytestring
                    ,   time
                    ,   old-locale
                    ,   conduit
                    ,   conduit-extra
                    ,   http-conduit
                    ,   resourcet
                    ,   websockets
                    ,   transformers
                    ,   network
                    ,   wuss
                    ,   scientific
                    ,   unordered-containers

                    ,   coinbase-exchange

test-suite test-coinbase
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     test
    ghc-options:        -threaded
    default-language:   Haskell2010

    build-depends:      base                ==4.*
                    ,   tasty
                    ,   tasty-th
                    ,   tasty-quickcheck
                    ,   tasty-hunit

                    ,   uuid
                    ,   bytestring
                    ,   time
                    ,   old-locale
                    ,   http-client-tls
                    ,   http-conduit
                    ,   transformers
                    ,   random
                    ,   scientific
                    ,   async
                    ,   websockets
                    ,   aeson               >=0.10.0
                    ,   unordered-containers

                    ,   coinbase-exchange
